fix alignment of gear icon

--- a/client/assets/styles/scss/deprecated/instances-list.scss
+++ b/client/assets/styles/scss/deprecated/instances-list.scss
@@ -5,6 +5,7 @@
     padding: 0 7px 0 29px;
 
     .icons-gear {
+      margin-left: auto;
       margin-right: 4px;
     }
   }
